--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/hooks": "^5.10.1",
     "@next/font": "13.1.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "connectkit": "^1.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "ethers": "^5.7.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
+    "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
+    "wagmi": "^0.9.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
